--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="logo">Optional Labs</div>
             <div class="navbar-center">Made with ❤️ in Bengaluru, India</div>
             <div class="navbar-right">
-                <!-- <a href="login.html" target="_self" <button class="login-btn"
-                    title="Login to your account">Login</button></a></button> -->
+                <a href="login.html" target="_self" <button class="login-btn"
+                    title="Login to your account">Login</button></a></button>
                 <a href="./registration-html.html" target="_self">
                     <button class="register-btn" title="Create a new account">Sign in/Sign Up</button>
                 </a>
