--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Optional Labs</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" sizes="32x32"  href="./Assets/light_mode(2).png">
+    <link rel="icon" sizes="32x32" href="./Assets/light_mode(2).png">
 </head>
 
 <body>
@@ -115,7 +115,8 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>© Optional Labs. All rights reserved. 2025-present.</p>
+        <p>© Optional Labs. All rights reserved. 2025-present. <a href="privacy-policy.html"
+                class="privacy-link">Privacy Policy</a></p>
     </footer>
 
     <!-- Firebase SDK -->
