--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
         </form>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <p>© Optional Labs. All rights reserved. 2025-present. <a href="privacy-policy.html"
-                class="privacy-link">Privacy Policy</a></p>
+                class="privacy-link">Privacy Policy</a> | <a href="manage-account.html" class="account-link">Manage
+                Account</a></p>
     </footer>
 
     <!-- Firebase SDK -->
