Add .gitignonre file and update the source code.

--- a/dashboard.html
+++ b/dashboard.html
@@ -96,9 +96,7 @@
             <h1>Welcome to Optional</h1>
             <p>You have successfully logged in!</p>
             <div class="action-buttons">
-                <a href="./index.html">
-                    <button class="logout-btn">Logout</button>
-                </a>
+                <button class="logout-btn" id="logout-btn">Logout</button>
                 <button class="delete-btn" id="deleteAccountBtn">Delete Account</button>
             </div>
         </div>
@@ -120,6 +118,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="./script.js"></script>
     <script src="./dashboard.js"></script>
 
     <script>
