--- a/Optional-Web/index.html
+++ b/Optional-Web/index.html
@@ -66,7 +66,7 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, qui!
                 </div>
                 <div class="details">
-                    <img src="img2.jpg" alt="">
+                    <img src="Assets/user.png" alt="User avatar">
                     <div class="designation">
                         <div class="name">Sarah Doe</div>
                         <div class="job">Strategic Consultant</div>
@@ -79,7 +79,7 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, qui!
                 </div>
                 <div class="details">
-                    <img src="img1.jpg" alt="">
+                    <img src="Assets/user.png" alt="User avatar">
                     <div class="designation">
                         <div class="name">John Doe</div>
                         <div class="job">Web Developer</div>
@@ -92,7 +92,7 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, qui!
                 </div>
                 <div class="details">
-                    <img src="img3.jpg" alt="">
+                    <img src="Assets/user.png" alt="User avatar">
                     <div class="designation">
                         <div class="name">Daniel Doe</div>
                         <div class="job">UI/UX Designer</div>
