--- a/Optional-Web/login.html
+++ b/Optional-Web/login.html
@@ -117,7 +117,7 @@
       <button type="submit" class="login-btn">Login</button>
     </form>
     <div class="extra-links">
-      <p>Don't have an account? <a href="register.html">Register</a></p>
+      <p>Don't have an account? <a href="registration-html.html">Register</a></p>
       <button onclick="location.href='index.html'" class="home-btn">Go to Home</button>
     </div>
   </div>
@@ -128,19 +128,7 @@
 
   <!-- Firebase Configuration -->
   <script>
-    // Your Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyD8r6mmkOSAtUUvTFib_0sw2u3FRcdwAsA",
-      authDomain: "optional-25cd8.firebaseapp.com",
-      projectId: "optional-25cd8",
-      storageBucket: "optional-25cd8.firebasestorage.app",
-      messagingSenderId: "232340431847",
-      appId: "1:232340431847:web:191ada6ed1d393d66f5342",
-      measurementId: "G-HQVLL3SN9H"
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+    // Firebase initialized via script.js
 
     // Handle Login
     const loginForm = document.getElementById('loginForm');
@@ -188,7 +176,7 @@
       errorMessage.textContent = message;
     }
   </script>
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
 </body>
 
 </html>
