--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, qui!
                 </div>
                 <div class="details">
-                    <img src="img2.jpg" alt="">
+                    <img src="Optional-Web/Assets/user.png" alt="User avatar">
                     <div class="designation">
                         <div class="name">Sarah Doe</div>
                         <div class="job">Strategic Consultant</div>
@@ -207,7 +207,7 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, qui!
                 </div>
                 <div class="details">
-                    <img src="img1.jpg" alt="">
+                    <img src="Optional-Web/Assets/user.png" alt="User avatar">
                     <div class="designation">
                         <div class="name">John Doe</div>
                         <div class="job">Web Developer</div>
@@ -220,7 +220,7 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, qui!
                 </div>
                 <div class="details">
-                    <img src="img3.jpg" alt="">
+                    <img src="Optional-Web/Assets/user.png" alt="User avatar">
                     <div class="designation">
                         <div class="name">Daniel Doe</div>
                         <div class="job">UI/UX Designer</div>
@@ -252,25 +252,14 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-functions.js"></script>
+    <script src="./script.js"></script>
 
     <div class="modal-container" style="display: none;"></div>
     <div id="loader" class="loader" style="display: none;">Loading...</div>
 
     <!-- Firebase App Link Sender Script -->
     <script>
-        // Firebase Configuration - Replace with your actual Firebase config
-        const firebaseConfig = {
-            apiKey: "AIzaSyD8r6mmkOSAtUUvTFib_0sw2u3FRcdwAsA",
-            authDomain: "optional-25cd8.firebaseapp.com",
-            projectId: "optional-25cd8",
-            storageBucket: "optional-25cd8.firebasestorage.app",
-            messagingSenderId: "232340431847",
-            appId: "1:232340431847:web:191ada6ed1d393d66f5342",
-            measurementId: "G-HQVLL3SN9H"
-        };
-
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
+        // Firebase initialized via script.js
 
         // Reference to Firebase services
         const auth = firebase.auth();
@@ -283,7 +272,9 @@
         const loader = document.getElementById('loader');
 
         // Add event listener to the send link button
-        sendLinkBtn.addEventListener('click', sendAppLink);
+        if (sendLinkBtn && emailInput) {
+    sendLinkBtn.addEventListener('click', sendAppLink);
+}
 
         /**
          * Sends app download link to the provided email
@@ -335,8 +326,10 @@
                 })
                 .finally(() => {
                     // Reset button state
-                    sendLinkBtn.disabled = false;
-                    sendLinkBtn.textContent = 'Send Link';
+                    if (sendLinkBtn) {
+                        sendLinkBtn.disabled = false;
+                        sendLinkBtn.textContent = 'Send Link';
+                    }
                     loader.style.display = 'none';
                 });
         }
@@ -370,7 +363,11 @@
 
             // Add it to the email section
             const emailSection = document.querySelector('.email-section');
-            emailSection.appendChild(messageElement);
+            if (emailSection) {
+                emailSection.appendChild(messageElement);
+            } else {
+                document.body.appendChild(messageElement);
+            }
 
             // Remove after 5 seconds
             setTimeout(() => {
