Add OAuth authentication with Google and Apple providers.

--- a/Optional-Web/login.html
+++ b/Optional-Web/login.html
@@ -176,7 +176,7 @@
       errorMessage.textContent = message;
     }
   </script>
-  <script src="../script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
