--- a/Optional-Web/dashboard.html
+++ b/Optional-Web/dashboard.html
@@ -23,7 +23,7 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
     <script src="./dashboard.js"></script>
 </body>
 
