--- a/Optional-Web/welcome.html
+++ b/Optional-Web/welcome.html
@@ -51,7 +51,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
     <script>
         firebase.auth().onAuthStateChanged((user) => {
             if (user) {
