--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Login | Optional Labs</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       margin: 0;
@@ -99,6 +99,109 @@
     .home-btn:hover {
       background-color: #059669;
     }
+
+    /* OAuth Buttons Styling */
+    .oauth-container {
+      margin: 1.5rem 0;
+      padding: 1rem 0;
+      border-top: 1px solid #e5e7eb;
+      border-bottom: 1px solid #e5e7eb;
+    }
+
+    .oauth-divider {
+      text-align: center;
+      margin: 1rem 0;
+      color: #6b7280;
+      font-size: 0.9rem;
+    }
+
+    .oauth-btn {
+      width: 100%;
+      padding: 12px 16px;
+      margin: 8px 0;
+      border: 1px solid #d1d5db;
+      border-radius: 8px;
+      background-color: white;
+      color: #374151;
+      font-size: 14px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
+      position: relative;
+    }
+
+    .oauth-btn:hover {
+      background-color: #f9fafb;
+      border-color: #9ca3af;
+      transform: translateY(-1px);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .oauth-btn:active {
+      transform: translateY(0);
+    }
+
+    .oauth-btn:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+      transform: none;
+    }
+
+    .oauth-btn:disabled:hover {
+      background-color: white;
+      border-color: #d1d5db;
+      transform: none;
+      box-shadow: none;
+    }
+
+    .google-btn {
+      border-color: #ea4335;
+    }
+
+    .google-btn:hover:not(:disabled) {
+      background-color: #fef2f2;
+      border-color: #dc2626;
+    }
+
+    .apple-btn {
+      background-color: #000;
+      color: white;
+      border-color: #000;
+    }
+
+    .apple-btn:hover:not(:disabled) {
+      background-color: #1f2937;
+      border-color: #1f2937;
+    }
+
+    .oauth-icon {
+      width: 20px;
+      height: 20px;
+      flex-shrink: 0;
+    }
+
+    .auth-loader {
+      display: none;
+      width: 16px;
+      height: 16px;
+      border: 2px solid #f3f3f3;
+      border-top: 2px solid #3498db;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .auth-btn-text {
+      flex: 1;
+    }
   </style>
 </head>
 
@@ -116,6 +219,31 @@
       </div>
       <button type="submit" class="login-btn">Login</button>
     </form>
+
+    <!-- OAuth Sign-In Options -->
+    <div class="oauth-container">
+      <div class="oauth-divider">or continue with</div>
+      
+      <button type="button" id="google-signin-btn" class="oauth-btn google-btn" onclick="signInWithGoogle()">
+        <svg class="oauth-icon" viewBox="0 0 24 24">
+          <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/>
+          <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
+          <path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
+          <path fill="#EA4335" d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"/>
+        </svg>
+        <span class="auth-btn-text">Continue with Google</span>
+        <div class="auth-loader"></div>
+      </button>
+
+      <button type="button" id="apple-signin-btn" class="oauth-btn apple-btn" onclick="signInWithApple()">
+        <svg class="oauth-icon" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
+        </svg>
+        <span class="auth-btn-text">Continue with Apple</span>
+        <div class="auth-loader"></div>
+      </button>
+    </div>
+
     <div class="extra-links">
       <p>Don't have an account? <a href="registration-html.html">Register</a></p>
       <button onclick="location.href='index.html'" class="home-btn">Go to Home</button>
@@ -177,6 +305,7 @@
     }
   </script>
   <script src="script.js"></script>
+  <script src="auth-providers.js"></script>
 </body>
 
 </html>
